Add testing settings

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,7 @@
 include README.rst
+include CHANGES.rst
+include tox.ini
+include setup.cfg
 include *.py
 recursive-include docs *
 recursive-include tests *
