Add ignore for pytest

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [pytest]
 addopts = --pep8 --flakes
-norecursedirs = venv .eggs .tox sample tests/testslide
+norecursedirs = venv .eggs .tox .c9
 
 # PEP8
 pep8maxlinelength = 119
