--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -5,3 +5,7 @@ include setup.cfg
 include *.py
 recursive-include docs *
 recursive-include tests *
+recursive-exclude docs *.pyc
+recursive-exclude docs *.pyo
+recursive-exclude tests *.pyc
+recursive-exclude tests *.pyo
